--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "bullmask",
-  "description": "Transfer funds to any wallet",
+  "name": "BULLGATE",
+  "description": "WEB3 Wallet",
   "version": "1.0",
   "manifest_version": 3,
   "action": {
